# po_agentframework

src/A2AClientServer/IntakeAgentA2A/: .dockerignore  .gitignore  Dockerfile  IntakeAgent.cs  IntakeAgentA2A.csproj  Program.cs
src/A2AClientServer/PurchaseOrderA2AClient/: Program.cs  PurchaseOrder.cs  PurchaseOrderA2AClient.csproj
src/A2AClientServer/data_agent_rust/: .gitignore  Cargo.toml  README.md  test_endpoints.sh  validate_a2a.sh
src/A2AClientServer/data_agent_rust/.devcontainer/: devcontainer.json
src/A2AClientServer/data_agent_rust/examples/: client_example.rs  enhanced_demo.rs  python_client.py  test_agent_card.rs  test_server_endpoint.rs
src/A2AClientServer/data_agent_rust/src/: a2a_agent_card.rs  agent.rs  lib.rs  main.rs  main_server.rs  server.rs
src/A2AClientServer/processing_agent_py/: .env.sample  README.md  agent_card.py  agents.py  models.py  requirements.txt  server.py  test_simple.py
src/A2AClientServer/processing_agent_py/.devcontainer/: devcontainer.json
src/AFPurchaseOrderClient/: Agents.cs  Program.cs
src/PurchaseOrderWorkflow/: Agents.cs  Program.cs  PurchaseOrderWorkflow.csproj
