[package]
name = "data_agent_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "demo"
path = "src/main.rs"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[dependencies]
a2a = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Web server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
